refactor: Minor improvements

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -2,6 +2,9 @@
 	background-color: #cea5ad;
 	color: #000000;
 	.btn {
-	background-color: #72aabb;
+		background-color: #72aabb;
+	}
+	img {
+		filter: grayscale(1);
 	}
 }
