--- a/_includes/features.html
+++ b/_includes/features.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Pourquoi-nous ?</h2>
         <hr class="primary" />
-        <p>Nos sites sont pensés pour être</p>
+        <p>Chacun de nos sites est pensé pour être</p>
       </div>
     </div>
   </div>
