--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -5,7 +5,7 @@
         <h2 class="section-heading">Un site vitrine clef-en-main !</h2>
         <hr class="light" />
         <p>L'esprit de Youcode, fournir au client la solution dont il a réellement besoin, de manière éco-responsable, tout en préservant sa vie privée</p>
-        <img alt="Photo fondateur" class="lazy" src="img/fondateur.webp" width="125" height="125" />
+        <img alt="Photo fondateur" class="lazy" src="img/fondateur.webp" data-src="img/fondateur-x2.webp" width="125" height="125" />
       </div>
     </div>
   </div>
