--- a/_sass/components/_features.scss
+++ b/_sass/components/_features.scss
@@ -1,22 +1,25 @@
 .bg-features {
 	background-color: #cbff00;
 	color: #000000;
+	p {
+		margin-bottom: 0;
+	}
 }
 
 .feature-box {
-    max-width: 400px;
-    margin: 50px auto 0;
-    @media (min-width: 992px) {
-        margin: 20px auto 0;
-    }
-    p {
-        margin-bottom: 0;
-    }
+	max-width: 400px;
+	margin: 50px auto 0;
+	@media (min-width: 992px) {
+		margin: 20px auto 0;
+	}
+	p {
+		font-size: 20px;
+	}
 }
 
 .feature {
-    text-align: center;
-    @media (min-width:992px){
-    	width: 20%;
-    }
+	text-align: center;
+	@media (min-width:992px){
+		width: 20%;
+	}
 }
