--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,1 @@
-<script src="js/lazyload.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/main.js"></script>
+<script src="js/scripts.js"></script>
