--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@ $font-family-base: "Montserrat", sans-serif;
 $font-family-heading: "Montserrat Alternates", sans-serif;
 
 @import
+	"bootstrap",
 	"mixins",
         "base",
         "fonts",
