--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2 class="section-heading">Un site vitrine clef-en-main !</h2>
         <hr class="light" />
-        <p>L'esprit de Youcode, fournir au client la solution dont il a réellement besoin, de manière éco-responsable, tout en préservant sa vie privée.</p>
+        <p>L'esprit de YouCode, vous fournir <b>la solution dont vous avez réellement besoin</b>, de manière éco-responsable, tout en préservant votre vie privée. Notre atout, une approche « secure by design » où <b>la cybersécurité est intégrée dès la conception</b> et tout au long du cycle de vie de votre site.</p>
         <img alt="Photo fondateur" class="lazy" src="img/fondateur.webp" data-src="img/fondateur-x2.webp" width="125" height="125" />
         <p class="founder">Stan</p>
       </div>
