--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -29,6 +29,9 @@ header {
             hr {
                 margin: 30px auto;
             }
+            p {
+            	padding-bottom: 25px;
+            }
         }
     }
     @media (min-width: 768px) {
