refactor: Improve pictures compatibility

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="lazy" data-bg="img/header.webp">
+<header class="lazy" data-bg="img/header.jpg">
   <div class="header-content">
     <div class="header-content-inner">
       <img src="img/logo.svg" alt="Logo Maison Mère" width="150" height="150" />
