refactor: Minor improvements

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -6,7 +6,7 @@
         <hr class="light" />
         <p>L'esprit de YouCode, vous fournir <b>la solution dont vous avez réellement besoin</b>, de manière éco-responsable, tout en préservant votre vie privée. Notre atout, une approche « secure by design » où <b>la cybersécurité est intégrée dès la conception</b> et tout au long du cycle de vie de votre site.</p>
         <picture>
-          <source srcset="img/fondateur.webp, img/fondateur-x2.webp" type="image/webp">
+          <source srcset="img/fondateur.webp" type="image/webp">
           <img alt="Photo fondateur" class="lazy" src="img/fondateur.png" width="125" height="125">
         </picture>
         <p class="founder">Stan</p>
