--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="lazy" data-bg="img/header.jpg">
   <div class="header-content">
     <div class="header-content-inner">
-      <img src="img/logo.svg" alt="Logo Maison Mère" width="150" height="150" />
+      <img class="lazy" src="img/logo.svg" alt="Logo Maison Mère" width="150" height="150" />
       <p></p>
-      <img src="img/youcode.svg" alt="Logo YouCode" />
+      <img class="lazy" src="img/youcode.svg" alt="Logo YouCode" />
       <hr />
       <h1 class="glitch" data-text="On crée votre site web">On crée votre site web</h1>
       <a href="#about" class="btn btn-primary btn-xl">En savoir plus</a>
