refactor: Improve performance massively

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,19 +8,19 @@
       </div>
       <div class="col-lg-2 col-lg-offset-2 text-center">
         <a href="https://www.google.fr/maps/place/7+Rue+le+Bouvier,+92340+Bourg-la-Reine">
-          <img alt="Logo adresse" src="img/contact/adresse.svg" class="lazy" width="85" height="85" />
+          <img alt="Logo adresse" src="img/sprites.svg#adresse" class="lazy" width="85" height="85" />
           <p class="details">{{ site.adresse }}</p>
         </a>
       </div>
       <div class="col-lg-2 col-lg-offset-1 text-center">
         <a href="mailto:{{ site.email }}">
-          <img alt="Logo email" src="img/contact/email.svg" class="lazy" width="85" height="85" />
+          <img alt="Logo email" src="img/sprites.svg#email" class="lazy" width="85" height="85" />
           <p class="details">{{ site.email }}</p>
         </a>
       </div>
       <div class="col-lg-2 col-lg-offset-1 text-center">
         <a href="tel:+33648808875">
-          <img alt="Logo telephone" src="img/contact/telephone.svg" class="lazy" width="85" height="85" />
+          <img alt="Logo telephone" src="img/sprites.svg#telephone" class="lazy" width="85" height="85" />
           <p class="details">{{ site.telephone }}</p>
         </a>
       </div>
