--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="lazy" data-bg="img/header.jpg">
   <div class="header-content">
     <div class="header-content-inner">
-      <img class="lazy" src="img/logo.svg" alt="Logo Maison Mère" width="150" height="150" />
+      <img class="lazy" src="img/sprites.svg#logo" alt="Logo Maison Mère" width="150" height="150" />
       <p></p>
       <img class="lazy" src="img/youcode.svg" alt="Logo YouCode" />
       <hr />
