--- a/_includes/features.html
+++ b/_includes/features.html
@@ -12,35 +12,35 @@
     <div class="row">
       <div class="col-lg-1 col-md-1 feature">
         <div class="feature-box">
-          <img alt="Logo accessible" src="img/features/accessible.svg" class="lazy wow animate__bounceIn" width="85" height="85" />
+          <img alt="Logo accessible" src="img/sprites.svg#accessible" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Accessible</h3>
           <p>Conçu pour être accessible 24h/24 7j/7 sur ordinateur, tablette ou mobile</p>
         </div>
       </div>
       <div class="col-lg-1 col-md-1 feature">
         <div class="feature-box">
-          <img alt="Logo fiable" src="img/features/fiable.svg" class="lazy wow animate__bounceIn" width="85" height="85" />
+          <img alt="Logo fiable" src="img/sprites.svg#fiable" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Fiable</h3>
           <p>Conçu pour être performant et sûr à l’image de votre activité</p>
         </div>
       </div>
       <div class="col-lg-1 col-md-1 feature">
         <div class="feature-box">
-          <img alt="Logo visible" src="img/features/visible.svg" class="lazy wow animate__bounceIn" width="85" height="85" />
+          <img alt="Logo visible" src="img/sprites.svg#visible" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Visible</h3>
           <p>Conçu pour être trouvé le plus facilement possible sur Google</p>
         </div>
       </div>
       <div class="col-lg-1 col-md-1 feature">
         <div class="feature-box">
-          <img alt="Logo rentable" src="img/features/rentable.svg" class="lazy wow animate__bounceIn" width="85" height="85" />
+          <img alt="Logo rentable" src="img/sprites.svg#rentable" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Rentable</h3>
           <p>Conçu pour maximiser le taux de conversion de visiteurs en clients</p>
         </div>
       </div>
       <div class="col-lg-1 col-md-1 feature">
         <div class="feature-box">
-          <img alt="Logo accessible" src="img/features/durable.svg" class="lazy wow animate__bounceIn" width="85" height="85" />
+          <img alt="Logo accessible" src="img/sprites.svg#durable" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Durable</h3>
           <p>Conçu à travers une gestion intelligente des ressources</p>
         </div>
