refactor: Update text content

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Pourquoi-nous ?</h2>
+        <h2 class="section-heading">Pourquoi nous ?</h2>
         <hr class="primary" />
         <p>Chacun de nos sites est pensé pour être</p>
       </div>
@@ -21,7 +21,7 @@
         <div class="feature-box">
           <img alt="Logo fiable" src="img/sprites.svg#fiable" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Fiable</h3>
-          <p>Conçu pour être performant et sûr à l’image de votre activité</p>
+          <p>Conçu pour être performant et sûr, à l’image de votre activité</p>
         </div>
       </div>
       <div class="col-lg-1 col-md-1 feature">
