--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,26 +1,28 @@
 <section class="bg-contact" id="contact">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 text-center">
+    <div class="row justify-content-center">
+      <div class="col-12 text-center">
         <h2 class="section-heading">Contact</h2>
         <hr class="primary" />
         <p>YouCode est une agence web, filiale de MAISON MÈRE S.A.S.</p>
       </div>
-      <div class="col-lg-2 col-lg-offset-2 text-center">
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-4 text-center">
         <a href="https://www.google.fr/maps/place/7+Rue+le+Bouvier,+92340+Bourg-la-Reine">
-          <img alt="Logo adresse" src="img/sprites.svg#adresse" class="lazy" width="85" height="85" />
+          <img alt="Logo adresse" class="lazy" width="85" height="85" src="img/sprites.svg#adresse" />
           <p class="details">{{ site.adresse }}</p>
         </a>
       </div>
-      <div class="col-lg-2 col-lg-offset-1 text-center">
+      <div class="col-md-4 text-center">
         <a href="mailto:{{ site.email }}">
-          <img alt="Logo email" src="img/sprites.svg#email" class="lazy" width="85" height="85" />
+          <img alt="Logo email" class="lazy" width="85" height="85" src="img/sprites.svg#email" />
           <p class="details">{{ site.email }}</p>
         </a>
       </div>
-      <div class="col-lg-2 col-lg-offset-1 text-center">
+      <div class="col-md-4 text-center">
         <a href="tel:+33648808875">
-          <img alt="Logo telephone" src="img/sprites.svg#telephone" class="lazy" width="85" height="85" />
+          <img alt="Logo telephone" class="lazy" width="85" height="85" src="img/sprites.svg#telephone" />
           <p class="details">{{ site.telephone }}</p>
         </a>
       </div>
