refactor: Update text content

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -14,7 +14,7 @@
         <div class="feature-box">
           <img alt="Logo accessible" src="img/sprites.svg#accessible" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Accessible</h3>
-          <p>Conçu pour être accessible 24h/24 7j/7 sur ordinateur, tablette ou mobile</p>
+          <p>Conçu pour être disponible 24h/24 7j/7 sur tous vos écrans</p>
         </div>
       </div>
       <div class="col-lg-1 col-md-1 feature">
@@ -42,7 +42,7 @@
         <div class="feature-box">
           <img alt="Logo accessible" src="img/sprites.svg#durable" class="lazy wow animate__bounceIn" width="85" height="85" />
           <h3>Durable</h3>
-          <p>Conçu à travers une gestion intelligente des ressources</p>
+          <p>Conçu à travers une gestion intelligente et responsable des ressources</p>
         </div>
       </div>
     </div>
