--- a/_includes/pricing.html
+++ b/_includes/pricing.html
@@ -1,12 +1,13 @@
 <aside class="bg-pricing">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Prix</h2>
+      <h2>Site vitrine</h2>
       <hr />
       <h3>Conception & Construction</h3>
       <p class="glitch" data-text="3600€ TTC">3600€ TTC</p>
-      <h3>Cyberveille & Gestion</h3>
-      <p class="glitch" data-text="72€ par mois TTC">72€ par mois TTC</p>
+      <h3>Accompagnement mensuel</h3>
+      <p class="description">Hébergement, nom de domaine, reporting et cyberveille inclus</p>
+      <p class="glitch" data-text="À partir de 120€ par mois TTC">À partir de 120€ par mois TTC</p>
       <a href="https://gfy0dyvoo3h.typeform.com/to/LNdOocGH" target="_blank" rel="noreferrer" class="btn btn-primary btn-xl animate__animated animate__tada animate__infinite">Contactez-nous</a>
     </div>
   </div>
