refactor: Update text content

--- a/_includes/pricing.html
+++ b/_includes/pricing.html
@@ -5,7 +5,7 @@
       <hr />
       <h3>Conception & Construction</h3>
       <p class="glitch" data-text="3600€ TTC">3600€ TTC</p>
-      <h3>Accompagnement mensuel</h3>
+      <h3>Accompagnement</h3>
       <p class="description">Hébergement, nom de domaine, reporting et cyberveille inclus</p>
       <p class="glitch" data-text="À partir de 120€ par mois TTC">À partir de 120€ par mois TTC</p>
       <a href="https://gfy0dyvoo3h.typeform.com/to/LNdOocGH" target="_blank" rel="noreferrer" class="btn btn-primary btn-xl animate__animated animate__tada animate__infinite">Contactez-nous</a>
